--- a/_variables.scss
+++ b/_variables.scss
@@ -8,11 +8,12 @@
   --hover-text: #fff;
   --navbar-hover: #fff;
   --input-hover: var(--outline);
-  --input-focus: var(--text-primary);
+  // --input-focus: var(--text-primary);
+  --input-focus: rgb(212, 212, 212);
   --outline: #6c757d52;
   --img-opacity: 0.85;
   --img-shadow: #d8edff;
-  --border-width: 4px;
+  --border-width: 3px;
 }
 
 .normalmode {
