--- a/style.scss
+++ b/style.scss
@@ -1,15 +1,14 @@
 @import "variables";
-
+@import "breakpoints/breakpoints.scss";
 body {
   background: var(--primary);
+}
+.overflw {
+  overflow: hidden;
 }
 .hide {
   display: inline-block !important;
 }
-.dis-flex {
-  display: flex !important;
-}
-
 .slidein {
   animation: slide-in 2s ease-in-out;
   @keyframes slide-in {
@@ -72,7 +71,7 @@ body {
   transition: all 1s;
 }
 .error-modal {
-  background: var(--primary);
+  background: var(--error-modal);
   width: 30%;
   border-radius: 0.5rem;
   position: absolute;
@@ -80,6 +79,21 @@ body {
   right: 40%;
   margin-right: -40px;
   z-index: 7;
+  @include media("<=phone") {
+    width: 96vw !important;
+    right: 1%;
+    margin-right: 5px;
+  }
+  @include media(">phone", "<=425px") {
+    width: 96vw !important;
+    right: 1%;
+    margin-right: 5px;
+  }
+  @include media(">425px", "<=tablet") {
+    width: 90% !important;
+    right: 2%;
+    margin-right: 15px;
+  }
 }
 .error-modal-brdr {
   border-radius: 0.5rem 0 0 0.5rem;
@@ -89,6 +103,14 @@ body {
   width: 2.5%;
   height: 100%;
 }
+.error-description {
+  @include media("<=phone") {
+    font-size: 0.9rem !important;
+  }
+  @include media(">phone", "<=425px") {
+    font-size: 0.9rem !important;
+  }
+}
 .error-modal-btn {
   position: absolute;
   right: 0;
@@ -96,6 +118,12 @@ body {
     border: none;
     background: var(--secondary);
     color: var(--button-text);
+    @include media("<=phone") {
+      margin-right: 0.3rem !important;
+    }
+    @include media(">phone", "<=425px") {
+      margin-right: 0.3rem !important;
+    }
     &:hover {
       background: var(--hover-background);
       color: var(--hover-text) !important;
@@ -108,19 +136,31 @@ body {
     }
   }
 }
-.error-modal-description {
-  cursor: none;
-  transition: all 0.3s ease-out;
-  &:hover {
-    color: var(--hover-text);
-    opacity: 0.8;
-  }
-}
 section {
   &.vessel {
     color: var(--text-primary);
     div {
       &.navbar {
+        @include media("<=phone") {
+          justify-content: center !important;
+          .logo-title {
+            &-right {
+              display: none;
+            }
+          }
+        }
+        @include media(">phone", "<=425px") {
+          .logo-title {
+            &-left {
+              padding-left: 0.4rem !important;
+              padding-right: 0 !important;
+            }
+            &-right {
+              padding-left: 0 !important;
+              padding-right: 0.4rem !important;
+            }
+          }
+        }
         .logo {
           background: var(--logo);
           background-size: contain;
@@ -148,12 +188,69 @@ section {
         z-index: 6;
         opacity: 0.6;
       }
+      &.limit-error {
+        width: 50%;
+        right: 25%;
+        margin-right: -25px;
+        @include media("<=phone") {
+          width: 98vw !important;
+          height: 30vw;
+          right: 1%;
+          margin-right: 1px;
+          .error-modal-btn {
+            flex-direction: column;
+            margin-right: 1rem;
+            p {
+              margin-right: 0 !important;
+              font-size: 1rem !important;
+              margin-bottom: 1rem !important;
+              span {
+                font-weight: bold;
+                display: block !important;
+              }
+            }
+          }
+        }
+        @include media(">phone", "<=425px") {
+          width: 98vw !important;
+          height: 30vw;
+          right: 1%;
+          margin-right: 1px;
+          .error-description {
+            font-weight: 600;
+            font-size: 1.1rem !important;
+          }
+          .error-modal-btn {
+            flex-direction: column;
+            margin-right: 1rem;
+            p {
+              margin-right: 0 !important;
+              font-size: 1rem !important;
+              margin-bottom: 1rem !important;
+              span {
+                font-weight: bold;
+                display: block !important;
+              }
+            }
+          }
+        }
+         @include media('>425px', "<=tablet"){
+           right: 2%;
+           margin-right: 15px;
+        }
+      }
       &.welcome-msg-popup {
         display: none;
         position: fixed;
         right: 1rem;
         bottom: 1rem;
         z-index: 5;
+        @include media("<=phone") {
+          display: none !important;
+        }
+        @include media(">phone", "<=425px") {
+          display: none !important;
+        }
         img {
           border-radius: 50%;
           width: 75px;
@@ -190,6 +287,22 @@ section {
         cursor: pointer;
         z-index: 5;
         transition: all 2s;
+        @include media("<=phone") {
+          width: 50px;
+          height: 50px;
+          bottom: 0.3rem;
+          left: 0.3rem;
+          i {
+            font-size: 1.2rem !important;
+          }
+        }
+        @include media(">phone", "<=425px") {
+          bottom: 0.3rem;
+          left: 0.3rem;
+          i {
+            font-size: 1.2rem !important;
+          }
+        }
         &:hover {
           opacity: var(--img-opacity);
         }
@@ -202,6 +315,12 @@ section {
       &.search-field {
         input {
           width: 300px;
+          @include media("<=phone") {
+            width: 200px;
+          }
+          @include media(">phone", "<=425px") {
+            width: 250px;
+          }
           border: var(--border-width) solid var(--outline);
           &:hover {
             border: var(--border-width) solid var(--input-hover);
@@ -216,6 +335,7 @@ section {
           border: none;
           background: var(--secondary);
           color: var(--button-text);
+
           &:hover {
             background: var(--hover-background);
             color: var(--hover-text) !important;
@@ -225,15 +345,26 @@ section {
             color: var(--hover-text) !important;
             border: 4px solid var(--outline);
             box-shadow: 0 0 5px var(--outline);
+            @include media("<=phone") {
+              border: 2px solid var(--outline);
+            }
+            @include media(">phone", "<=425px") {
+              border: 2px solid var(--outline);
+            }
           }
         }
       }
       &.users-container {
-        display: none;
         .img-details {
           img {
             border-radius: 50%;
             width: 200px;
+            @include media("<=phone") {
+              width: 150px;
+            }
+            @include media(">phone", "<=425px") {
+              width: 150px;
+            }
             box-shadow: 0 0 10px var(--img-shadow);
             opacity: var(--img-opacity);
           }
@@ -245,6 +376,20 @@ section {
             grid-template-columns: repeat(3, 100px);
             grid-template-rows: repeat(2, 120px);
             justify-content: center;
+            @include media("<=phone") {
+              hyphens: auto;
+              word-wrap: break-word;
+              margin-bottom: 1rem;
+              grid-template-columns: repeat(2, 150px);
+              grid-template-rows: repeat(2, 150px);
+            }
+            @include media(">phone", "<=425px") {
+              hyphens: auto;
+              word-wrap: break-word;
+              margin-bottom: 1rem;
+              grid-template-columns: repeat(2, 150px);
+              grid-template-rows: repeat(2, 150px);
+            }
           }
         }
         .view {
