readonly input field update

--- a/style.css
+++ b/style.css
@@ -278,8 +278,8 @@ body {
   outline: none;
   border: none;
   color: var(--hover-text) !important;
-  -webkit-box-shadow: 0 0 10px 5px var(--outline);
-          box-shadow: 0 0 10px 5px var(--outline);
+  -webkit-box-shadow: 0 0 5px var(--outline);
+          box-shadow: 0 0 5px var(--outline);
 }
 
 section.vessel {
@@ -335,7 +335,7 @@ section.vessel div.overlay {
   position: absolute;
   top: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100vw;
   z-index: 6;
   opacity: 0.6;
 }
@@ -428,10 +428,10 @@ section.vessel div.welcome-msg-popup {
 }
 
 section.vessel div.welcome-msg-popup img {
+  background: #b7ae9e;
   border-radius: 50%;
   width: 75px;
   cursor: pointer;
-  opacity: var(--img-opacity);
 }
 
 section.vessel div.welcome-msg-popup p {
@@ -626,6 +626,20 @@ section.vessel div.users-container .contents ul {
   }
 }
 
+@media (max-width: 365px) {
+  section.vessel div.users-container .view {
+    margin-top: 1.5rem !important;
+    margin-bottom: 0.5rem !important;
+  }
+}
+
+@media (min-width: 366px) and (max-width: 425px) {
+  section.vessel div.users-container .view {
+    margin-top: 1.5rem !important;
+    margin-bottom: 0.5rem !important;
+  }
+}
+
 section.vessel div.users-container .view button {
   background: var(--secondary);
   color: var(--button-text) !important;
@@ -642,5 +656,17 @@ section.vessel div.users-container .view button:focus {
   border: 4px solid var(--outline);
   -webkit-box-shadow: 0 0 5px var(--outline);
           box-shadow: 0 0 5px var(--outline);
+}
+
+@media (max-width: 365px) {
+  section.vessel div.users-container .view button:focus {
+    border: 2px solid var(--outline);
+  }
+}
+
+@media (min-width: 366px) and (max-width: 425px) {
+  section.vessel div.users-container .view button:focus {
+    border: 2px solid var(--outline);
+  }
 }
 /*# sourceMappingURL=style.css.map */
